--- a/leetcode/数论/下一个更大元素3.md
+++ b/leetcode/数论/下一个更大元素3.md
@@ -1,1 +1,44 @@
+# 下一个更大元素3
 
+[](https://leetcode.cn/problems/next-greater-element-iii/solution/xia-yi-ge-geng-da-yuan-su-iii-by-leetcod-mqf1/)
+
+首先找到最靠后的较小的数字a，通过前面一位比后面一位大，则前面这一位不是较小的数字，如果前面一位比后面一位小，则前面这一位是较小的数字
+
+找到较小的数字之后，可以再从后往前找一个比较小的数字大的第一个数字，交换这两个数字，得到一个更大的数字，得到之后将a后面的数字交换，将大的放在后面，小的放在前面
+
+```java
+class Solution {
+    public int nextGreaterElement(int n) {
+        char[] nums = Integer.toString(n).toCharArray();
+        int i = nums.length-2;
+        while(i>=0 && nums[i] >= nums[i+1]){
+            --i;
+        }
+        if(i < 0){
+            return -1;
+        }
+        int j = nums.length-1;
+        while(j >= 0 && nums[i] >= nums[j]){
+            --j;
+        }
+        swap(nums, i, j);
+        reverse(nums, i+1);
+        long ans = Long.parseLong(new String(nums));
+        return ans > Integer.MAX_VALUE ? -1 : (int)(ans);
+    }
+
+    public void reverse(char[] nums, int begin){
+        int i = begin, j = nums.length-1;
+        while(i < j){
+            swap(nums, i, j);
+            ++i;
+            --j;
+        }
+    }
+    public void swap(char[] nums, int i, int j){
+        char temp = nums[i];
+        nums[i] = nums[j];
+        nums[j] = temp;
+    }
+}
+```
