Update and rename 最低加油次数.cpp to 最低加油次数.md

--- a/leetcode/动态规划/最低加油次数.md
+++ b/leetcode/动态规划/最低加油次数.md
@@ -1,4 +1,5 @@
-//https://leetcode.cn/problems/minimum-number-of-refueling-stops/submissions/
+https://leetcode.cn/problems/minimum-number-of-refueling-stops/submissions/
+``` java
 class Solution {
     public int minRefuelStops(int target, int startFuel, int[][] stations) {
         int n = stations.length;
@@ -24,3 +25,4 @@ class Solution {
         return -1;
     }
 }
+```
