--- a/leetcode/动态规划/最低加油次数.md
+++ b/leetcode/动态规划/最低加油次数.md
@@ -1,4 +1,5 @@
 https://leetcode.cn/problems/minimum-number-of-refueling-stops/submissions/
+https://www.cnblogs.com/yjx-7355608/p/16046253.html
 ``` java
 class Solution {
     public int minRefuelStops(int target, int startFuel, int[][] stations) {
@@ -25,4 +26,27 @@ class Solution {
         return -1;
     }
 }
+
+//一维数组
+class Solution {
+    public int minRefuelStops(int target, int startFuel, int[][] stations) {
+        int n = stations.length;
+        long[] dp = new long[n+1]; //表示加j次油能够跑的最远距离
+        dp[0] = startFuel;
+        for(int i = 0; i < n; ++i){
+            for(int j = n; j >= 1; --j){
+                if(dp[j-1] >= stations[i][0]){  //如果前j-1次加的油能够达到第i个加油站
+                    dp[j] = Math.max(dp[j], dp[j-1]+stations[i][1]); //在第i个加油站可以选择加油或者不加油，不论如何加油的总数都是j次
+                }
+            }
+        }
+        for(int j = 0; j <= n; ++j){
+            if(dp[j] >= target){
+                return j;
+            }
+        }
+        return -1;
+    }
+}
+
 ```
